# amcax-step-io

./: .gitignore  CMakeLists.txt  README.md  compile.sh  run.sh
include/: io.h
src/: io.cpp  main.cpp
